# matrix_controller

./: .env.example  .gitignore  README.md  __test__.py  config.py  main.py  pyproject.toml  todos.md
docs/plans/: 2026-06-10-cli-typer-questionary.md  2026-06-10-code-review-fixes.md  2026-06-10-global-rewrite.md  2026-06-10-inline-kit-api-reliability.md
docs/specs/: 2026-06-10-batch-matrix-deploy-design.md  2026-06-10-cli-typer-questionary-design.md  2026-06-10-global-rewrite-design.md  2026-06-10-inline-kit-api-reliability-design.md
new_src/: app.py  main.py
new_src/controllers/: update_matrices_controller.py
new_src/domain/: exceptions.py
src/: controller.py  dtos.py  entities.py  enums.py  kit_api_client.py  ports.py  use_cases.py  utils.py
src/adapters/: cell_repository.py  kit_product_repo.py  matrix_repository.py  snack_machine_repository.py  source_product_repository.py
src/aggregates/: goods_collection.py
src/application/: exceptions.py  update_multiple_matrices_case.py  update_snack_matrix_case.py  user_select_matrices_use_case.py
src/bootstrap/: container.py  settings.py
src/controllers/: update_matrices_controller.py  update_snacks_matrices.py
src/domain/: enums.py  exceptions.py  project_timezone.py
src/external_clients/: gspread_client.py  kit_api_client.py
src/infrastructure/: google_sheets_api_client.py  gspread_service.py  interactive_matrices_selector.py  kit_service.py  logger.py  logging.py  rate_limiter.py
src/services/: matrix_service.py  positions_service.py  product_service.py  snack_machine_service.py
tests/application/: conftest.py  test_deploy_matrices.py  test_run_deployment_job.py  test_sync_all_caches.py  test_upload_and_apply_matrix.py
tests/bootstrap/: test_settings.py
(+151 files in other folders)
