[project]
name = "matrix-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "dotenv>=0.9.9",
    "gspread-asyncio>=2.0.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.0.0",
    "beartype>=0.22.9",
    "tzlocal>=5.3.1",
    "questionary>=2.1.1",
    "typer>=0.25.1",
]

[project.scripts]
matrix-controller = "src.interfaces.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: full pipeline tests with mocked external services",
]
